referenceimplementation/parser.output
   0  $accept : %entry% $end

   1  program : program_item_star
   2          | ident_decl program_item_star

   3  program_item_star :
   4                    | program_item program_item_star

   5  program_item : fun_decl
   6               | resource_decl

   7  fun_decl : IDENT LPAREN formal_params RPAREN invariant LBRACE local_decls statement_star RBRACE invariant

   8  resource_decl : RESOURCE IDENT LPAREN ident_seq RPAREN LBRACKET a_proposition RBRACKET

   9  ident_decl : ident_seq SEMI

  10  ident_seq :
  11            | ident_notempty_seq

  12  ident_notempty_seq : IDENT
  13                     | IDENT COMMA ident_notempty_seq

  14  local_decls :
  15              | LOCAL ident_notempty_seq SEMI local_decls

  16  statement_star :
  17                 | statement statement_star

  18  statement : IDENT EQUAL expression SEMI
  19            | IDENT EQUAL expression MINUSGREATER IDENT SEMI
  20            | expression MINUSGREATER IDENT EQUAL expression SEMI
  21            | IDENT EQUAL NEW LPAREN RPAREN SEMI
  22            | DISPOSE expression SEMI
  23            | LBRACE statement_star RBRACE
  24            | IF LPAREN expression RPAREN statement
  25            | IF LPAREN expression RPAREN statement ELSE statement
  26            | WHILE LPAREN expression RPAREN invariant statement
  27            | WITH IDENT WHEN LPAREN expression RPAREN statement
  28            | IDENT LPAREN actual_params RPAREN SEMI
  29            | IDENT LPAREN actual_params RPAREN BARBAR IDENT LPAREN actual_params RPAREN SEMI

  30  invariant :
  31            | LBRACKET a_proposition RBRACKET

  32  expression : IDENT
  33             | NAT
  34             | TT
  35             | FF
  36             | LPAREN expression RPAREN
  37             | INFIXOP2 expression
  38             | expression AMPERAMPER expression
  39             | expression STAR expression
  40             | expression XOR expression
  41             | expression EQUALEQUAL expression
  42             | expression BANGEQUAL expression
  43             | expression INFIXOP1 expression
  44             | expression INFIXOP2 expression
  45             | expression INFIXOP3 expression

  46  expression_seq :
  47                 | expression_notempty_seq

  48  expression_notempty_seq : expression
  49                          | expression COMMA expression_notempty_seq

  50  formal_params : ident_seq
  51                | ident_seq SEMI ident_seq

  52  actual_params : expression_seq
  53                | expression_seq SEMI expression_seq

  54  a_component_expression_seq :
  55                             | a_component_expression_notempty_seq

  56  a_component_expression_notempty_seq : IDENT COLON a_expression
  57                                      | IDENT COLON a_expression COMMA a_component_expression_notempty_seq

  58  a_space_pred : LIST LPAREN IDENT SEMI a_expression RPAREN
  59               | LIST LPAREN a_expression RPAREN
  60               | LISTSEG LPAREN IDENT SEMI a_expression COMMA a_expression RPAREN
  61               | LISTSEG LPAREN a_expression COMMA a_expression RPAREN
  62               | DLSEG LPAREN IDENT SEMI IDENT SEMI a_expression COMMA a_expression COMMA a_expression COMMA a_expression RPAREN
  63               | DLSEG LPAREN a_expression COMMA a_expression COMMA a_expression COMMA a_expression RPAREN
  64               | XLSEG LPAREN IDENT SEMI IDENT SEMI a_expression COMMA a_expression COMMA a_expression COMMA a_expression RPAREN
  65               | XLSEG LPAREN a_expression COMMA a_expression COMMA a_expression COMMA a_expression RPAREN
  66               | TREE LPAREN IDENT SEMI IDENT SEMI a_expression RPAREN
  67               | TREE LPAREN a_expression RPAREN
  68               | EMPTY
  69               | a_expression POINTSTO a_component_expression_seq
  70               | a_expression POINTSTO a_expression
  71               | a_expression POINTSTO a_expression COMMA a_expression

  72  a_proposition : LPAREN a_proposition RPAREN
  73                | a_expression EQUALEQUAL a_expression
  74                | a_expression BANGEQUAL a_expression
  75                | FF
  76                | a_proposition STAR a_proposition
  77                | IF a_proposition THEN a_proposition ELSE a_proposition
  78                | a_space_pred

  79  a_expression : LPAREN a_expression RPAREN
  80               | a_expression XOR a_expression
  81               | IDENT
  82               | QIDENT
  83               | NAT

  84  %entry% : '\001' program
  85          | '\002' a_proposition

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	'\002'  shift 2
	.  error

	%entry%  goto 3


state 1
	%entry% : '\001' . program  (84)
	program_item_star : .  (3)
	ident_seq : .  (10)

	IDENT  shift 4
	RESOURCE  shift 5
	$end  reduce 3
	SEMI  reduce 10

	program  goto 6
	program_item_star  goto 7
	ident_decl  goto 8
	program_item  goto 9
	fun_decl  goto 10
	resource_decl  goto 11
	ident_seq  goto 12
	ident_notempty_seq  goto 13


state 2
	%entry% : '\002' . a_proposition  (85)

	DLSEG  shift 14
	EMPTY  shift 15
	FF  shift 16
	IDENT  shift 17
	QIDENT  shift 18
	IF  shift 19
	LIST  shift 20
	LISTSEG  shift 21
	LPAREN  shift 22
	NAT  shift 23
	TREE  shift 24
	XLSEG  shift 25
	.  error

	a_proposition  goto 26
	a_expression  goto 27
	a_space_pred  goto 28


state 3
	$accept : %entry% . $end  (0)

	$end  accept


state 4
	fun_decl : IDENT . LPAREN formal_params RPAREN invariant LBRACE local_decls statement_star RBRACE invariant  (7)
	ident_notempty_seq : IDENT .  (12)
	ident_notempty_seq : IDENT . COMMA ident_notempty_seq  (13)

	COMMA  shift 29
	LPAREN  shift 30
	SEMI  reduce 12


state 5
	resource_decl : RESOURCE . IDENT LPAREN ident_seq RPAREN LBRACKET a_proposition RBRACKET  (8)

	IDENT  shift 31
	.  error


state 6
	%entry% : '\001' program .  (84)

	.  reduce 84


state 7
	program : program_item_star .  (1)

	.  reduce 1


state 8
	program : ident_decl . program_item_star  (2)
	program_item_star : .  (3)

	IDENT  shift 32
	RESOURCE  shift 5
	$end  reduce 3

	program_item_star  goto 33
	program_item  goto 9
	fun_decl  goto 10
	resource_decl  goto 11


state 9
	program_item_star : program_item . program_item_star  (4)
	program_item_star : .  (3)

	IDENT  shift 32
	RESOURCE  shift 5
	$end  reduce 3

	program_item_star  goto 34
	program_item  goto 9
	fun_decl  goto 10
	resource_decl  goto 11


state 10
	program_item : fun_decl .  (5)

	.  reduce 5


state 11
	program_item : resource_decl .  (6)

	.  reduce 6


state 12
	ident_decl : ident_seq . SEMI  (9)

	SEMI  shift 35
	.  error


state 13
	ident_seq : ident_notempty_seq .  (11)

	.  reduce 11


state 14
	a_space_pred : DLSEG . LPAREN IDENT SEMI IDENT SEMI a_expression COMMA a_expression COMMA a_expression COMMA a_expression RPAREN  (62)
	a_space_pred : DLSEG . LPAREN a_expression COMMA a_expression COMMA a_expression COMMA a_expression RPAREN  (63)

	LPAREN  shift 36
	.  error


state 15
	a_space_pred : EMPTY .  (68)

	.  reduce 68


state 16
	a_proposition : FF .  (75)

	.  reduce 75


state 17
	a_expression : IDENT .  (81)

	.  reduce 81


state 18
	a_expression : QIDENT .  (82)

	.  reduce 82


state 19
	a_proposition : IF . a_proposition THEN a_proposition ELSE a_proposition  (77)

	DLSEG  shift 14
	EMPTY  shift 15
	FF  shift 16
	IDENT  shift 17
	QIDENT  shift 18
	IF  shift 19
	LIST  shift 20
	LISTSEG  shift 21
	LPAREN  shift 22
	NAT  shift 23
	TREE  shift 24
	XLSEG  shift 25
	.  error

	a_proposition  goto 37
	a_expression  goto 27
	a_space_pred  goto 28


state 20
	a_space_pred : LIST . LPAREN IDENT SEMI a_expression RPAREN  (58)
	a_space_pred : LIST . LPAREN a_expression RPAREN  (59)

	LPAREN  shift 38
	.  error


state 21
	a_space_pred : LISTSEG . LPAREN IDENT SEMI a_expression COMMA a_expression RPAREN  (60)
	a_space_pred : LISTSEG . LPAREN a_expression COMMA a_expression RPAREN  (61)

	LPAREN  shift 39
	.  error


state 22
	a_proposition : LPAREN . a_proposition RPAREN  (72)
	a_expression : LPAREN . a_expression RPAREN  (79)

	DLSEG  shift 14
	EMPTY  shift 15
	FF  shift 16
	IDENT  shift 17
	QIDENT  shift 18
	IF  shift 19
	LIST  shift 20
	LISTSEG  shift 21
	LPAREN  shift 22
	NAT  shift 23
	TREE  shift 24
	XLSEG  shift 25
	.  error

	a_proposition  goto 40
	a_expression  goto 41
	a_space_pred  goto 28


state 23
	a_expression : NAT .  (83)

	.  reduce 83


state 24
	a_space_pred : TREE . LPAREN IDENT SEMI IDENT SEMI a_expression RPAREN  (66)
	a_space_pred : TREE . LPAREN a_expression RPAREN  (67)

	LPAREN  shift 42
	.  error


state 25
	a_space_pred : XLSEG . LPAREN IDENT SEMI IDENT SEMI a_expression COMMA a_expression COMMA a_expression COMMA a_expression RPAREN  (64)
	a_space_pred : XLSEG . LPAREN a_expression COMMA a_expression COMMA a_expression COMMA a_expression RPAREN  (65)

	LPAREN  shift 43
	.  error


state 26
	a_proposition : a_proposition . STAR a_proposition  (76)
	%entry% : '\002' a_proposition .  (85)

	STAR  shift 44
	$end  reduce 85


state 27
	a_space_pred : a_expression . POINTSTO a_component_expression_seq  (69)
	a_space_pred : a_expression . POINTSTO a_expression  (70)
	a_space_pred : a_expression . POINTSTO a_expression COMMA a_expression  (71)
	a_proposition : a_expression . EQUALEQUAL a_expression  (73)
	a_proposition : a_expression . BANGEQUAL a_expression  (74)
	a_expression : a_expression . XOR a_expression  (80)

	BANGEQUAL  shift 45
	EQUALEQUAL  shift 46
	POINTSTO  shift 47
	XOR  shift 48
	.  error


state 28
	a_proposition : a_space_pred .  (78)

	.  reduce 78


state 29
	ident_notempty_seq : IDENT COMMA . ident_notempty_seq  (13)

	IDENT  shift 49
	.  error

	ident_notempty_seq  goto 50


state 30
	fun_decl : IDENT LPAREN . formal_params RPAREN invariant LBRACE local_decls statement_star RBRACE invariant  (7)
	ident_seq : .  (10)

	IDENT  shift 49
	RPAREN  reduce 10
	SEMI  reduce 10

	formal_params  goto 51
	ident_seq  goto 52
	ident_notempty_seq  goto 13


state 31
	resource_decl : RESOURCE IDENT . LPAREN ident_seq RPAREN LBRACKET a_proposition RBRACKET  (8)

	LPAREN  shift 53
	.  error


state 32
	fun_decl : IDENT . LPAREN formal_params RPAREN invariant LBRACE local_decls statement_star RBRACE invariant  (7)

	LPAREN  shift 30
	.  error


state 33
	program : ident_decl program_item_star .  (2)

	.  reduce 2


state 34
	program_item_star : program_item program_item_star .  (4)

	.  reduce 4


state 35
	ident_decl : ident_seq SEMI .  (9)

	.  reduce 9


state 36
	a_space_pred : DLSEG LPAREN . IDENT SEMI IDENT SEMI a_expression COMMA a_expression COMMA a_expression COMMA a_expression RPAREN  (62)
	a_space_pred : DLSEG LPAREN . a_expression COMMA a_expression COMMA a_expression COMMA a_expression RPAREN  (63)

	IDENT  shift 54
	QIDENT  shift 18
	LPAREN  shift 55
	NAT  shift 23
	.  error

	a_expression  goto 56


state 37
	a_proposition : a_proposition . STAR a_proposition  (76)
	a_proposition : IF a_proposition . THEN a_proposition ELSE a_proposition  (77)

	STAR  shift 44
	THEN  shift 57
	.  error


state 38
	a_space_pred : LIST LPAREN . IDENT SEMI a_expression RPAREN  (58)
	a_space_pred : LIST LPAREN . a_expression RPAREN  (59)

	IDENT  shift 58
	QIDENT  shift 18
	LPAREN  shift 55
	NAT  shift 23
	.  error

	a_expression  goto 59


state 39
	a_space_pred : LISTSEG LPAREN . IDENT SEMI a_expression COMMA a_expression RPAREN  (60)
	a_space_pred : LISTSEG LPAREN . a_expression COMMA a_expression RPAREN  (61)

	IDENT  shift 60
	QIDENT  shift 18
	LPAREN  shift 55
	NAT  shift 23
	.  error

	a_expression  goto 61


state 40
	a_proposition : LPAREN a_proposition . RPAREN  (72)
	a_proposition : a_proposition . STAR a_proposition  (76)

	RPAREN  shift 62
	STAR  shift 44
	.  error


state 41
	a_space_pred : a_expression . POINTSTO a_component_expression_seq  (69)
	a_space_pred : a_expression . POINTSTO a_expression  (70)
	a_space_pred : a_expression . POINTSTO a_expression COMMA a_expression  (71)
	a_proposition : a_expression . EQUALEQUAL a_expression  (73)
	a_proposition : a_expression . BANGEQUAL a_expression  (74)
	a_expression : LPAREN a_expression . RPAREN  (79)
	a_expression : a_expression . XOR a_expression  (80)

	BANGEQUAL  shift 45
	EQUALEQUAL  shift 46
	POINTSTO  shift 47
	RPAREN  shift 63
	XOR  shift 48
	.  error


state 42
	a_space_pred : TREE LPAREN . IDENT SEMI IDENT SEMI a_expression RPAREN  (66)
	a_space_pred : TREE LPAREN . a_expression RPAREN  (67)

	IDENT  shift 64
	QIDENT  shift 18
	LPAREN  shift 55
	NAT  shift 23
	.  error

	a_expression  goto 65


state 43
	a_space_pred : XLSEG LPAREN . IDENT SEMI IDENT SEMI a_expression COMMA a_expression COMMA a_expression COMMA a_expression RPAREN  (64)
	a_space_pred : XLSEG LPAREN . a_expression COMMA a_expression COMMA a_expression COMMA a_expression RPAREN  (65)

	IDENT  shift 66
	QIDENT  shift 18
	LPAREN  shift 55
	NAT  shift 23
	.  error

	a_expression  goto 67


state 44
	a_proposition : a_proposition STAR . a_proposition  (76)

	DLSEG  shift 14
	EMPTY  shift 15
	FF  shift 16
	IDENT  shift 17
	QIDENT  shift 18
	IF  shift 19
	LIST  shift 20
	LISTSEG  shift 21
	LPAREN  shift 22
	NAT  shift 23
	TREE  shift 24
	XLSEG  shift 25
	.  error

	a_proposition  goto 68
	a_expression  goto 27
	a_space_pred  goto 28


state 45
	a_proposition : a_expression BANGEQUAL . a_expression  (74)

	IDENT  shift 17
	QIDENT  shift 18
	LPAREN  shift 55
	NAT  shift 23
	.  error

	a_expression  goto 69


state 46
	a_proposition : a_expression EQUALEQUAL . a_expression  (73)

	IDENT  shift 17
	QIDENT  shift 18
	LPAREN  shift 55
	NAT  shift 23
	.  error

	a_expression  goto 70


state 47
	a_space_pred : a_expression POINTSTO . a_component_expression_seq  (69)
	a_space_pred : a_expression POINTSTO . a_expression  (70)
	a_space_pred : a_expression POINTSTO . a_expression COMMA a_expression  (71)
	a_component_expression_seq : .  (54)

	IDENT  shift 71
	QIDENT  shift 18
	LPAREN  shift 55
	NAT  shift 23
	$end  reduce 54
	ELSE  reduce 54
	RBRACKET  reduce 54
	RPAREN  reduce 54
	STAR  reduce 54
	THEN  reduce 54

	a_component_expression_seq  goto 72
	a_component_expression_notempty_seq  goto 73
	a_expression  goto 74


state 48
	a_expression : a_expression XOR . a_expression  (80)

	IDENT  shift 17
	QIDENT  shift 18
	LPAREN  shift 55
	NAT  shift 23
	.  error

	a_expression  goto 75


state 49
	ident_notempty_seq : IDENT .  (12)
	ident_notempty_seq : IDENT . COMMA ident_notempty_seq  (13)

	COMMA  shift 29
	RPAREN  reduce 12
	SEMI  reduce 12


state 50
	ident_notempty_seq : IDENT COMMA ident_notempty_seq .  (13)

	.  reduce 13


state 51
	fun_decl : IDENT LPAREN formal_params . RPAREN invariant LBRACE local_decls statement_star RBRACE invariant  (7)

	RPAREN  shift 76
	.  error


state 52
	formal_params : ident_seq .  (50)
	formal_params : ident_seq . SEMI ident_seq  (51)

	SEMI  shift 77
	RPAREN  reduce 50


state 53
	resource_decl : RESOURCE IDENT LPAREN . ident_seq RPAREN LBRACKET a_proposition RBRACKET  (8)
	ident_seq : .  (10)

	IDENT  shift 49
	RPAREN  reduce 10

	ident_seq  goto 78
	ident_notempty_seq  goto 13


state 54
	a_space_pred : DLSEG LPAREN IDENT . SEMI IDENT SEMI a_expression COMMA a_expression COMMA a_expression COMMA a_expression RPAREN  (62)
	a_expression : IDENT .  (81)

	SEMI  shift 79
	COMMA  reduce 81
	XOR  reduce 81


state 55
	a_expression : LPAREN . a_expression RPAREN  (79)

	IDENT  shift 17
	QIDENT  shift 18
	LPAREN  shift 55
	NAT  shift 23
	.  error

	a_expression  goto 80


state 56
	a_space_pred : DLSEG LPAREN a_expression . COMMA a_expression COMMA a_expression COMMA a_expression RPAREN  (63)
	a_expression : a_expression . XOR a_expression  (80)

	COMMA  shift 81
	XOR  shift 48
	.  error


state 57
	a_proposition : IF a_proposition THEN . a_proposition ELSE a_proposition  (77)

	DLSEG  shift 14
	EMPTY  shift 15
	FF  shift 16
	IDENT  shift 17
	QIDENT  shift 18
	IF  shift 19
	LIST  shift 20
	LISTSEG  shift 21
	LPAREN  shift 22
	NAT  shift 23
	TREE  shift 24
	XLSEG  shift 25
	.  error

	a_proposition  goto 82
	a_expression  goto 27
	a_space_pred  goto 28


state 58
	a_space_pred : LIST LPAREN IDENT . SEMI a_expression RPAREN  (58)
	a_expression : IDENT .  (81)

	SEMI  shift 83
	RPAREN  reduce 81
	XOR  reduce 81


state 59
	a_space_pred : LIST LPAREN a_expression . RPAREN  (59)
	a_expression : a_expression . XOR a_expression  (80)

	RPAREN  shift 84
	XOR  shift 48
	.  error


state 60
	a_space_pred : LISTSEG LPAREN IDENT . SEMI a_expression COMMA a_expression RPAREN  (60)
	a_expression : IDENT .  (81)

	SEMI  shift 85
	COMMA  reduce 81
	XOR  reduce 81


state 61
	a_space_pred : LISTSEG LPAREN a_expression . COMMA a_expression RPAREN  (61)
	a_expression : a_expression . XOR a_expression  (80)

	COMMA  shift 86
	XOR  shift 48
	.  error


state 62
	a_proposition : LPAREN a_proposition RPAREN .  (72)

	.  reduce 72


state 63
	a_expression : LPAREN a_expression RPAREN .  (79)

	.  reduce 79


state 64
	a_space_pred : TREE LPAREN IDENT . SEMI IDENT SEMI a_expression RPAREN  (66)
	a_expression : IDENT .  (81)

	SEMI  shift 87
	RPAREN  reduce 81
	XOR  reduce 81


state 65
	a_space_pred : TREE LPAREN a_expression . RPAREN  (67)
	a_expression : a_expression . XOR a_expression  (80)

	RPAREN  shift 88
	XOR  shift 48
	.  error


state 66
	a_space_pred : XLSEG LPAREN IDENT . SEMI IDENT SEMI a_expression COMMA a_expression COMMA a_expression COMMA a_expression RPAREN  (64)
	a_expression : IDENT .  (81)

	SEMI  shift 89
	COMMA  reduce 81
	XOR  reduce 81


state 67
	a_space_pred : XLSEG LPAREN a_expression . COMMA a_expression COMMA a_expression COMMA a_expression RPAREN  (65)
	a_expression : a_expression . XOR a_expression  (80)

	COMMA  shift 90
	XOR  shift 48
	.  error


state 68
	a_proposition : a_proposition . STAR a_proposition  (76)
	a_proposition : a_proposition STAR a_proposition .  (76)

	.  reduce 76


state 69
	a_proposition : a_expression BANGEQUAL a_expression .  (74)
	a_expression : a_expression . XOR a_expression  (80)

	XOR  shift 48
	$end  reduce 74
	ELSE  reduce 74
	RBRACKET  reduce 74
	RPAREN  reduce 74
	STAR  reduce 74
	THEN  reduce 74


state 70
	a_proposition : a_expression EQUALEQUAL a_expression .  (73)
	a_expression : a_expression . XOR a_expression  (80)

	XOR  shift 48
	$end  reduce 73
	ELSE  reduce 73
	RBRACKET  reduce 73
	RPAREN  reduce 73
	STAR  reduce 73
	THEN  reduce 73


state 71
	a_component_expression_notempty_seq : IDENT . COLON a_expression  (56)
	a_component_expression_notempty_seq : IDENT . COLON a_expression COMMA a_component_expression_notempty_seq  (57)
	a_expression : IDENT .  (81)

	COLON  shift 91
	$end  reduce 81
	COMMA  reduce 81
	ELSE  reduce 81
	RBRACKET  reduce 81
	RPAREN  reduce 81
	STAR  reduce 81
	THEN  reduce 81
	XOR  reduce 81


state 72
	a_space_pred : a_expression POINTSTO a_component_expression_seq .  (69)

	.  reduce 69


state 73
	a_component_expression_seq : a_component_expression_notempty_seq .  (55)

	.  reduce 55


state 74
	a_space_pred : a_expression POINTSTO a_expression .  (70)
	a_space_pred : a_expression POINTSTO a_expression . COMMA a_expression  (71)
	a_expression : a_expression . XOR a_expression  (80)

	COMMA  shift 92
	XOR  shift 48
	$end  reduce 70
	ELSE  reduce 70
	RBRACKET  reduce 70
	RPAREN  reduce 70
	STAR  reduce 70
	THEN  reduce 70


state 75
	a_expression : a_expression . XOR a_expression  (80)
	a_expression : a_expression XOR a_expression .  (80)

	.  reduce 80


state 76
	fun_decl : IDENT LPAREN formal_params RPAREN . invariant LBRACE local_decls statement_star RBRACE invariant  (7)
	invariant : .  (30)

	LBRACKET  shift 93
	LBRACE  reduce 30

	invariant  goto 94


state 77
	formal_params : ident_seq SEMI . ident_seq  (51)
	ident_seq : .  (10)

	IDENT  shift 49
	RPAREN  reduce 10

	ident_seq  goto 95
	ident_notempty_seq  goto 13


state 78
	resource_decl : RESOURCE IDENT LPAREN ident_seq . RPAREN LBRACKET a_proposition RBRACKET  (8)

	RPAREN  shift 96
	.  error


state 79
	a_space_pred : DLSEG LPAREN IDENT SEMI . IDENT SEMI a_expression COMMA a_expression COMMA a_expression COMMA a_expression RPAREN  (62)

	IDENT  shift 97
	.  error


state 80
	a_expression : LPAREN a_expression . RPAREN  (79)
	a_expression : a_expression . XOR a_expression  (80)

	RPAREN  shift 63
	XOR  shift 48
	.  error


state 81
	a_space_pred : DLSEG LPAREN a_expression COMMA . a_expression COMMA a_expression COMMA a_expression RPAREN  (63)

	IDENT  shift 17
	QIDENT  shift 18
	LPAREN  shift 55
	NAT  shift 23
	.  error

	a_expression  goto 98


state 82
	a_proposition : a_proposition . STAR a_proposition  (76)
	a_proposition : IF a_proposition THEN a_proposition . ELSE a_proposition  (77)

	ELSE  shift 99
	STAR  shift 44
	.  error


state 83
	a_space_pred : LIST LPAREN IDENT SEMI . a_expression RPAREN  (58)

	IDENT  shift 17
	QIDENT  shift 18
	LPAREN  shift 55
	NAT  shift 23
	.  error

	a_expression  goto 100


state 84
	a_space_pred : LIST LPAREN a_expression RPAREN .  (59)

	.  reduce 59


state 85
	a_space_pred : LISTSEG LPAREN IDENT SEMI . a_expression COMMA a_expression RPAREN  (60)

	IDENT  shift 17
	QIDENT  shift 18
	LPAREN  shift 55
	NAT  shift 23
	.  error

	a_expression  goto 101


state 86
	a_space_pred : LISTSEG LPAREN a_expression COMMA . a_expression RPAREN  (61)

	IDENT  shift 17
	QIDENT  shift 18
	LPAREN  shift 55
	NAT  shift 23
	.  error

	a_expression  goto 102


state 87
	a_space_pred : TREE LPAREN IDENT SEMI . IDENT SEMI a_expression RPAREN  (66)

	IDENT  shift 103
	.  error


state 88
	a_space_pred : TREE LPAREN a_expression RPAREN .  (67)

	.  reduce 67


state 89
	a_space_pred : XLSEG LPAREN IDENT SEMI . IDENT SEMI a_expression COMMA a_expression COMMA a_expression COMMA a_expression RPAREN  (64)

	IDENT  shift 104
	.  error


state 90
	a_space_pred : XLSEG LPAREN a_expression COMMA . a_expression COMMA a_expression COMMA a_expression RPAREN  (65)

	IDENT  shift 17
	QIDENT  shift 18
	LPAREN  shift 55
	NAT  shift 23
	.  error

	a_expression  goto 105


state 91
	a_component_expression_notempty_seq : IDENT COLON . a_expression  (56)
	a_component_expression_notempty_seq : IDENT COLON . a_expression COMMA a_component_expression_notempty_seq  (57)

	IDENT  shift 17
	QIDENT  shift 18
	LPAREN  shift 55
	NAT  shift 23
	.  error

	a_expression  goto 106


state 92
	a_space_pred : a_expression POINTSTO a_expression COMMA . a_expression  (71)

	IDENT  shift 17
	QIDENT  shift 18
	LPAREN  shift 55
	NAT  shift 23
	.  error

	a_expression  goto 107


state 93
	invariant : LBRACKET . a_proposition RBRACKET  (31)

	DLSEG  shift 14
	EMPTY  shift 15
	FF  shift 16
	IDENT  shift 17
	QIDENT  shift 18
	IF  shift 19
	LIST  shift 20
	LISTSEG  shift 21
	LPAREN  shift 22
	NAT  shift 23
	TREE  shift 24
	XLSEG  shift 25
	.  error

	a_proposition  goto 108
	a_expression  goto 27
	a_space_pred  goto 28


state 94
	fun_decl : IDENT LPAREN formal_params RPAREN invariant . LBRACE local_decls statement_star RBRACE invariant  (7)

	LBRACE  shift 109
	.  error


state 95
	formal_params : ident_seq SEMI ident_seq .  (51)

	.  reduce 51


state 96
	resource_decl : RESOURCE IDENT LPAREN ident_seq RPAREN . LBRACKET a_proposition RBRACKET  (8)

	LBRACKET  shift 110
	.  error


state 97
	a_space_pred : DLSEG LPAREN IDENT SEMI IDENT . SEMI a_expression COMMA a_expression COMMA a_expression COMMA a_expression RPAREN  (62)

	SEMI  shift 111
	.  error


state 98
	a_space_pred : DLSEG LPAREN a_expression COMMA a_expression . COMMA a_expression COMMA a_expression RPAREN  (63)
	a_expression : a_expression . XOR a_expression  (80)

	COMMA  shift 112
	XOR  shift 48
	.  error


state 99
	a_proposition : IF a_proposition THEN a_proposition ELSE . a_proposition  (77)

	DLSEG  shift 14
	EMPTY  shift 15
	FF  shift 16
	IDENT  shift 17
	QIDENT  shift 18
	IF  shift 19
	LIST  shift 20
	LISTSEG  shift 21
	LPAREN  shift 22
	NAT  shift 23
	TREE  shift 24
	XLSEG  shift 25
	.  error

	a_proposition  goto 113
	a_expression  goto 27
	a_space_pred  goto 28


state 100
	a_space_pred : LIST LPAREN IDENT SEMI a_expression . RPAREN  (58)
	a_expression : a_expression . XOR a_expression  (80)

	RPAREN  shift 114
	XOR  shift 48
	.  error


state 101
	a_space_pred : LISTSEG LPAREN IDENT SEMI a_expression . COMMA a_expression RPAREN  (60)
	a_expression : a_expression . XOR a_expression  (80)

	COMMA  shift 115
	XOR  shift 48
	.  error


state 102
	a_space_pred : LISTSEG LPAREN a_expression COMMA a_expression . RPAREN  (61)
	a_expression : a_expression . XOR a_expression  (80)

	RPAREN  shift 116
	XOR  shift 48
	.  error


state 103
	a_space_pred : TREE LPAREN IDENT SEMI IDENT . SEMI a_expression RPAREN  (66)

	SEMI  shift 117
	.  error


state 104
	a_space_pred : XLSEG LPAREN IDENT SEMI IDENT . SEMI a_expression COMMA a_expression COMMA a_expression COMMA a_expression RPAREN  (64)

	SEMI  shift 118
	.  error


state 105
	a_space_pred : XLSEG LPAREN a_expression COMMA a_expression . COMMA a_expression COMMA a_expression RPAREN  (65)
	a_expression : a_expression . XOR a_expression  (80)

	COMMA  shift 119
	XOR  shift 48
	.  error


state 106
	a_component_expression_notempty_seq : IDENT COLON a_expression .  (56)
	a_component_expression_notempty_seq : IDENT COLON a_expression . COMMA a_component_expression_notempty_seq  (57)
	a_expression : a_expression . XOR a_expression  (80)

	COMMA  shift 120
	XOR  shift 48
	$end  reduce 56
	ELSE  reduce 56
	RBRACKET  reduce 56
	RPAREN  reduce 56
	STAR  reduce 56
	THEN  reduce 56


state 107
	a_space_pred : a_expression POINTSTO a_expression COMMA a_expression .  (71)
	a_expression : a_expression . XOR a_expression  (80)

	XOR  shift 48
	$end  reduce 71
	ELSE  reduce 71
	RBRACKET  reduce 71
	RPAREN  reduce 71
	STAR  reduce 71
	THEN  reduce 71


state 108
	invariant : LBRACKET a_proposition . RBRACKET  (31)
	a_proposition : a_proposition . STAR a_proposition  (76)

	RBRACKET  shift 121
	STAR  shift 44
	.  error


state 109
	fun_decl : IDENT LPAREN formal_params RPAREN invariant LBRACE . local_decls statement_star RBRACE invariant  (7)
	local_decls : .  (14)

	LOCAL  shift 122
	DISPOSE  reduce 14
	FF  reduce 14
	IDENT  reduce 14
	IF  reduce 14
	INFIXOP2  reduce 14
	LBRACE  reduce 14
	LPAREN  reduce 14
	NAT  reduce 14
	RBRACE  reduce 14
	TT  reduce 14
	WHILE  reduce 14
	WITH  reduce 14

	local_decls  goto 123


state 110
	resource_decl : RESOURCE IDENT LPAREN ident_seq RPAREN LBRACKET . a_proposition RBRACKET  (8)

	DLSEG  shift 14
	EMPTY  shift 15
	FF  shift 16
	IDENT  shift 17
	QIDENT  shift 18
	IF  shift 19
	LIST  shift 20
	LISTSEG  shift 21
	LPAREN  shift 22
	NAT  shift 23
	TREE  shift 24
	XLSEG  shift 25
	.  error

	a_proposition  goto 124
	a_expression  goto 27
	a_space_pred  goto 28


state 111
	a_space_pred : DLSEG LPAREN IDENT SEMI IDENT SEMI . a_expression COMMA a_expression COMMA a_expression COMMA a_expression RPAREN  (62)

	IDENT  shift 17
	QIDENT  shift 18
	LPAREN  shift 55
	NAT  shift 23
	.  error

	a_expression  goto 125


state 112
	a_space_pred : DLSEG LPAREN a_expression COMMA a_expression COMMA . a_expression COMMA a_expression RPAREN  (63)

	IDENT  shift 17
	QIDENT  shift 18
	LPAREN  shift 55
	NAT  shift 23
	.  error

	a_expression  goto 126


state 113
	a_proposition : a_proposition . STAR a_proposition  (76)
	a_proposition : IF a_proposition THEN a_proposition ELSE a_proposition .  (77)

	STAR  shift 44
	$end  reduce 77
	ELSE  reduce 77
	RBRACKET  reduce 77
	RPAREN  reduce 77
	THEN  reduce 77


state 114
	a_space_pred : LIST LPAREN IDENT SEMI a_expression RPAREN .  (58)

	.  reduce 58


state 115
	a_space_pred : LISTSEG LPAREN IDENT SEMI a_expression COMMA . a_expression RPAREN  (60)

	IDENT  shift 17
	QIDENT  shift 18
	LPAREN  shift 55
	NAT  shift 23
	.  error

	a_expression  goto 127


state 116
	a_space_pred : LISTSEG LPAREN a_expression COMMA a_expression RPAREN .  (61)

	.  reduce 61


state 117
	a_space_pred : TREE LPAREN IDENT SEMI IDENT SEMI . a_expression RPAREN  (66)

	IDENT  shift 17
	QIDENT  shift 18
	LPAREN  shift 55
	NAT  shift 23
	.  error

	a_expression  goto 128


state 118
	a_space_pred : XLSEG LPAREN IDENT SEMI IDENT SEMI . a_expression COMMA a_expression COMMA a_expression COMMA a_expression RPAREN  (64)

	IDENT  shift 17
	QIDENT  shift 18
	LPAREN  shift 55
	NAT  shift 23
	.  error

	a_expression  goto 129


state 119
	a_space_pred : XLSEG LPAREN a_expression COMMA a_expression COMMA . a_expression COMMA a_expression RPAREN  (65)

	IDENT  shift 17
	QIDENT  shift 18
	LPAREN  shift 55
	NAT  shift 23
	.  error

	a_expression  goto 130


state 120
	a_component_expression_notempty_seq : IDENT COLON a_expression COMMA . a_component_expression_notempty_seq  (57)

	IDENT  shift 131
	.  error

	a_component_expression_notempty_seq  goto 132


state 121
	invariant : LBRACKET a_proposition RBRACKET .  (31)

	.  reduce 31


state 122
	local_decls : LOCAL . ident_notempty_seq SEMI local_decls  (15)

	IDENT  shift 49
	.  error

	ident_notempty_seq  goto 133

